--- a/DatingApp-SPA/src/app/home/home.component.html
+++ b/DatingApp-SPA/src/app/home/home.component.html
@@ -19,7 +19,7 @@
 
   <div *ngIf="registerMode" class="container">
     <div class="row justify-content-center">
-      <div class="col-4">
+      <div class="col-4 register-container card py-3" >
         <app-register (cancelRegister)="cancelRegisterMode($event)"></app-register>
       </div>
     </div>
