--- a/DatingApp-SPA/src/app/members/it-is-a-match/it-is-a-match.component.css
+++ b/DatingApp-SPA/src/app/members/it-is-a-match/it-is-a-match.component.css
@@ -1,4 +1,5 @@
 .it-is-a-match-container {
+    visibility: hidden;
     display: flex;
     position:fixed !important;
     flex-direction: column;
