--- a/DatingApp-SPA/src/app/app.component.css
+++ b/DatingApp-SPA/src/app/app.component.css
@@ -1,5 +1,5 @@
 mat-sidenav-container {
-    height: calc(100vh - 88.38px - 56px); 
+    height: calc(100vh - 59.38px); 
   }
   
   mat-sidenav div {
@@ -8,6 +8,7 @@ mat-sidenav-container {
     margin-right: 30px;
     overflow-x:visible;
   }
+
 
 .sidenav-item {
   display: flex;
@@ -27,21 +28,12 @@ mat-sidenav-container {
   transform: scale(1.1);
 }
 
-  @media (max-width: 991px) {
-    mat-sidenav-container {
-      height: calc(100vh - 71.38px - 56px);
-    }
-  }
+  
 
-  @media (max-width: 768px) {
-    mat-sidenav-container {
-      height: calc(100vh - 59.38px - 50px);
-    }
-  }
 
   @media (max-width: 410px) {
     mat-sidenav-container {
-      height: calc(100vh - 71.38px - 50px);
+      height: calc(100vh - 49.38px);
     }
   }
 
