--- a/DatingApp-SPA/src/app/members/member-card-detailed/member-card-detailed.component.css
+++ b/DatingApp-SPA/src/app/members/member-card-detailed/member-card-detailed.component.css
@@ -2,8 +2,9 @@
     box-sizing: content-box;
     position: relative;
     width: 550px;
-    height: 769px;
+    height: calc(100vh - 190px);
     overflow: scroll;
+    scroll-behavior: smooth;
 }
 
 
