--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-4">
   <div class="row">
-    <div class="col-sm-4"> <!-- LEFT HSND SIDE-->
+    <div class="col-sm-4"> <!-- LEFT HAND SIDE-->
       <div class="card"> 
         <img
           class="card-img-top img-thumbnail"
@@ -31,8 +31,8 @@
       
       <div class="card-footer">
         <div class="btn-group d-flex">
-          <button class="btn btn-primary w-100" (click)="sendLike(user.id)">Like</button>
-          <button class="btn btn-success w-100" (click)="selectTab(3)">Message</button>
+          <button *ngIf="!user.hasMatchedCurrentUser" class="btn btn-primary w-100" (click)="sendLike(user.id)">Like</button>
+          <button *ngIf="user.hasMatchedCurrentUser" class="btn btn-success w-100" (click)="selectTab(3)">Message</button>
         </div>
       </div>
     </div>
@@ -55,7 +55,7 @@
             <tab heading="Photos">
               <ngx-gallery [options]="galleryOptions" [images]="galleryImages"></ngx-gallery>
             </tab>
-            <tab heading="Messages">
+            <tab *ngIf="user.hasMatchedCurrentUser" heading="Messages">
               <app-member-messages [recipientId]="user.id"></app-member-messages>
             </tab>
 
