--- a/DatingApp-SPA/src/app/messages/messages.component.html
+++ b/DatingApp-SPA/src/app/messages/messages.component.html
@@ -1,19 +1,19 @@
 <div class="container mt-5">
-  <div class="row">
-    <div class="btn-group">
-      <button class="btn btn-primary" [(ngModel)]="messageContainer" btnRadio="Unread" (click)="loadMessages()">
+  <div class="row messages-buttons">
+    <div class="btn-group ">
+      <button class="btn btn-primary message-button" [(ngModel)]="messageContainer" btnRadio="Unread" (click)="loadMessages()">
         <i class="fa fa-envelope"></i> Unread
       </button>
-      <button class="btn btn-primary" [(ngModel)]="messageContainer" btnRadio="Inbox" (click)="loadMessages()">
+      <button class="btn btn-primary message-button" [(ngModel)]="messageContainer" btnRadio="Inbox" (click)="loadMessages()">
         <i class="fa fa-envelope-open"></i> Inbox
       </button>
-      <button class="btn btn-primary" [(ngModel)]="messageContainer" btnRadio="Outbox" (click)="loadMessages()">
+      <button class="btn btn-primary message-button" [(ngModel)]="messageContainer" btnRadio="Outbox" (click)="loadMessages()">
         <i class="fa fa-paper-plane"></i> Outbox
       </button>
     </div>
   </div>
 
-  <div class="row" *ngIf="messages.length == 0">
+  <div class="row no-messages-text mb-4" *ngIf="messages.length == 0">
     <h3>No messages</h3>
   </div>
 
