--- a/DatingApp-SPA/src/app/nav-bar/nav-bar.component.html
+++ b/DatingApp-SPA/src/app/nav-bar/nav-bar.component.html
@@ -3,23 +3,44 @@
     <div class="navbar-logo">
       <a class="" [routerLink]="['/home']">
         <img src="../../assets/caminder-logo.png" class="img-logo">
-        <h2 class="navbar-app-name"> Căminder </h2>
       </a>
     </div>
 
   
+
     <ul *ngIf="loggedIn()" class="navbar-nav ">
       <li class="nav-item" routerLinkActive="router-link-active">
-        <a class="nav-link" [routerLink]="['/matches']" alt="Matches"> <i class="fa fa-thumbs-up fa-2x"></i></a>
+        
+          
+        
+        <a class="nav-link hover-text-container" [routerLink]="['/matches']" alt="Matches"> 
+          
+            <i class="fa fa-thumbs-up fa-2x"></i>
+            <span class="hover-text">Matches & Likes</span>
+          
+        </a>
+        
+      </li>
+      <li class="nav-item" routerLinkActive="router-link-active ">
+        <a class="nav-link hover-text-container" [routerLink]="['/members']"> 
+          <i class="fa fa-heart fa-2x "></i>
+          <span class="hover-text">Find Your Match</span>
+        </a>
+        
       </li>
       <li class="nav-item" routerLinkActive="router-link-active">
-        <a class="nav-link" [routerLink]="['/members']"> <i class="fa fa-heart fa-2x"> </i> </a>
-      </li>
-      <li class="nav-item" routerLinkActive="router-link-active">
-        <a class="nav-link" [routerLink]="['/messages']"    tabindex="-1" ><i class="fa fa-envelope fa-2x"> </i></a>
+        <a class="nav-link hover-text-container" [routerLink]="['/messages']"    tabindex="-1" >
+          <i class="fa fa-envelope fa-2x "></i>
+          <span class="hover-text">Messages</span>
+        </a>
+        
       </li>
       <li *appHasRole="['Admin', 'Moderator']" class="nav-item" routerLinkActive="router-link-active">
-        <a class="nav-link" [routerLink]="['/admin']"> <i class="fa fa-users fa-2x"> </i> </a>
+        <a class="nav-link hover-text-container" [routerLink]="['/admin']"> 
+          <i class="fa fa-users fa-2x "></i>
+          <span class="hover-text">Admin Settings</span>
+        </a>
+        
       </li>
     </ul>
 
@@ -36,8 +57,9 @@
     
     </div>
 
-
-    <form *ngIf="!loggedIn()" #loginForm='ngForm' class="form-inline my-2 my-lg-0" (ngSubmit)="login()">
+    <button *ngIf="!loggedIn()" class="sign-in-button btn btn-success my-2 my-sm-0" (click)="toggleTheSignInModal()"> {{signInModalToggled ? 'Close' : 'Sign In' }}</button>
+    <form *ngIf="!loggedIn()" #loginForm='ngForm' class="form-inline my-2 my-lg-0 login-form" (ngSubmit)="login()">
+      
       <input class="form-control mr-sm-2" type="text" 
       placeholder="Username" name="username" aria-label="Username" required [(ngModel)]="model.username">
       <input class="form-control mr-sm-2" type="password" 
