--- a/DatingApp-SPA/src/app/members/member-card/member-card.component.css
+++ b/DatingApp-SPA/src/app/members/member-card/member-card.component.css
@@ -1,12 +1,18 @@
 
-.card:hover img {
+.cards {
+    border: none;
+    height: fit-content;
+    padding-bottom: 3rem;
+}
+
+.member-card:hover img {
     transform: scale(1.2, 1.2);
     transition-duration: 500ms;
     transition-timing-function: ease-out;
     opacity: 0.7;
 }
 
-.card img {
+.member-card img {
     transform: scale(1.0, 1.0);
     transition-duration: 500ms;
     transition-timing-function: ease-out;
@@ -15,6 +21,59 @@
 .card-img-wrapper {
     overflow: hidden;
     position: relative;
+}
+
+/* Backside css properties */
+
+.member-card, .member-card-backside {
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+  }
+
+
+.member-card-backside {
+    position: absolute;
+    transform: rotateY(180deg);
+    width: 100%;
+    height: fit-content;
+    margin-bottom: 3rem;
+    top: 0;
+    left: 0;
+}
+
+
+.member-card-backside img {
+    transform: scale(1.0, 1.0);
+    transition-duration: 500ms;
+    transition-timing-function: ease-out;
+    opacity: 0.2;
+}
+
+.member-card-backside:hover img {
+    transform: scale(1.2, 1.2);
+    transition-duration: 500ms;
+    transition-timing-function: ease-out;
+    opacity: 0.1;
+}
+
+.card-img-wrapper-pink {
+    background-image: linear-gradient(to left top, rgba(235, 106, 102, 0.9), rgba(235, 106, 102, 1) );
+    overflow: hidden;
+    position: relative;
+    opacity: 1;
+    z-index: 3;
+    
+}
+
+.pink-message-button {
+    position: absolute;
+    bottom: 40%;
+    
+    left: 0;
+    right: 0;
+    margin-right: auto;
+    margin-left: auto;
+    opacity: 1;
 }
 
 .member-icons {
