--- a/DatingApp-SPA/src/app/nav-bar/nav-bar.component.css
+++ b/DatingApp-SPA/src/app/nav-bar/nav-bar.component.css
@@ -142,15 +142,16 @@ img.img-logo {
 @media (max-width: 410px) {
     img.img-avatar { 
         width: 40px;
+        margin-right: 4px !important;
     }
     
     img.img-logo {
-        display: none;
+        width: 40px;
     }
 
     .navbar-nav {
-        transform: translateX(-10%);
-        width: 70%;
+        /* transform: translateX(-10%); */
+        width: 50%;
     }
 
     i {
@@ -158,9 +159,8 @@ img.img-logo {
     }
 }
 
-@media(max-width:294px) {
+@media(max-width:275px) {
     .navbar-nav {
-        transform: translateX(-20%);
-        width: 55%;
+        width: 45%;
     }
 }
