Added the distance in Member Details Page

--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -8,7 +8,7 @@
                         <i class="fa fa-user fa-lg"> </i> <h5 class="sidenav-item-text"> Edit Profile </h5 >                
                 </a>
                 <!-- <div class="dropdown-divider"> </div> -->
-                <a class="sidenav-item" [routerLink]="['/member/settings']" (click)="toggleSideDrawer(false)" ><i class="fa fa-cog fa-lg"> </i> <h5 class="sidenav-item-text">Settings</h5 ></a>
+                <a class="sidenav-item" [routerLink]="['/member/filters']" (click)="toggleSideDrawer(false)" ><i class="fa fa-sliders fa-lg"> </i> <h5 class="sidenav-item-text">Search Filters</h5 ></a>
                 <a class="sidenav-item"  (click)="logout()"> <i class="fa fa-sign-out fa-lg" > </i> <h5 class="sidenav-item-text">Logout</h5 ></a>
             </div>
         </mat-sidenav>
