--- a/DatingApp-SPA/src/app/members/it-is-a-match/it-is-a-match.component.html
+++ b/DatingApp-SPA/src/app/members/it-is-a-match/it-is-a-match.component.html
@@ -6,7 +6,7 @@
             <img src="{{userLiker?.photoUrl}}">
         </div>
         <div class="user-liked-photo">
-            <img src="{{userLiked?.photoUrl}}">
+            <img src="{{userLiked?.photoUrl ? userLiked?.photoUrl : defaultUserProfilePicture}}">
         </div>
     </div>
 </div>
