--- a/DatingApp-SPA/src/app/app.component.css
+++ b/DatingApp-SPA/src/app/app.component.css
@@ -60,7 +60,7 @@ mat-sidenav-container {
   }
   
   mat-sidenav {
-    background-color: #eb6864;
+    background-color: rgb(235, 104, 100);
     width: 200px;
   }
 
