--- a/DatingApp-SPA/src/app/home/home.component.html
+++ b/DatingApp-SPA/src/app/home/home.component.html
@@ -1,9 +1,13 @@
 <div class="container mt-5">
   <div *ngIf="!registerMode && !learnMoreMode" style="text-align: center">
-    <h1>Find your match</h1>
-    <img src="../../assets/caminder-logo-full.png" class="home-logo">
+    <h1 class="mb-4">Find your match</h1>
+    <img src="../../assets/lovender-logo-p.png"
+    class="home-logo"
+    [@heartAnimator]="animationState"
+    (@heartAnimator.done)="resetAnimationState()"
+    (click)="startAnimation('flipAround')">
     <p *ngIf="!this.authService.loggedIn()" class="lead mt-2"> Come on in to view your matches... All you need to do is sign up!</p>
-    <p *ngIf="this.authService.loggedIn()" class="lead mt-2"> Welcome to Căminder! Click on Members tab to find your match</p>
+    <p *ngIf="this.authService.loggedIn()" class="lead mt-2"> Welcome to Lovender! Click on Members tab to find your match</p>
     <div *ngIf="!this.authService.loggedIn()" class="text-center">
       <button class="btn btn-primary btn-lg mr-2"(click)="registerToggle()">Register</button>
       <button class="btn btn-info btn-lg" (click)="learnMoreToggle()" >Learn more</button>
