--- a/DatingApp-SPA/src/app/members/member-card-detailed/member-card-detailed.component.html
+++ b/DatingApp-SPA/src/app/members/member-card-detailed/member-card-detailed.component.html
@@ -9,9 +9,15 @@
       <div class="card-user-photos" #scrollToTop>
         <ngx-gallery #gallery class="card-img-top"  [options]="galleryOptions" [images]="galleryImages"> </ngx-gallery>
           <ul class="list-inline member-icons animate text-center">
-            <button class="btn-md btn-primary ml-3 mr-3 member-icon" (tap)="skipUser()"> <i class="fa fa-times-circle fa-3x"></i></button>
-            <button class="btn-md btn-primary ml-3 mr-3 member-icon" (tap)="scrollToTheBottom()"> <i class="fa fa-arrow-down fa-3x"></i></button>
-            <button class="btn-md btn-primary ml-3 mr-3 member-icon" (tap)="sendLike(user.id)"> <i class="fa fa-heart fa-3x"></i></button>
+            <button class="btn-md btn-primary ml-3 mr-3 member-icon hover-text-container" (tap)="skipUser()"> <i class="fa fa-times-circle fa-3x"></i>
+                <span class="hover-text hover-text-button">Skip</span>
+            </button>
+            <button class="btn-md btn-primary ml-3 mr-3 member-icon hover-text-container" (tap)="scrollToTheBottom()"> <i class="fa fa-arrow-down fa-3x"></i>
+                <span class="hover-text hover-text-button">More Details</span>
+            </button>
+            <button class="btn-md btn-primary ml-3 mr-3 member-icon hover-text-container" (tap)="sendLike(user.id)"> <i class="fa fa-heart fa-3x"></i>
+                <span class="hover-text hover-text-button">Like</span>
+            </button>
           </ul>
 
       </div
@@ -19,7 +25,7 @@
       <div class="card-body p-1">
         <h6 class="card-title text-center mb-1"> {{user.knownAs}}, {{user.age}} 
         </h6>
-        <p class="card-text text-muted text-center"> <i class="fa fa-map-marker"></i> {{user.city}} </p>
+        <p class="card-text text-muted text-center"> <i class="fa fa-map-marker"></i> {{user.distanceFromCurrentUser > 0 ? user.distanceFromCurrentUser + ' km away' : 'Less than 1 km away'}} </p>
       </div>
 
       <div class="card-footer card-user-info text-muted">
